@@ -2673,6 +2673,7 @@ enum MACROCALLTYPE
 	MCT_GETCUSTOMSORTMODES = 10,
 	MCT_ADDMACRO           = 11,
 	MCT_KEYMACRO           = 12,
+	MCT_CUSTOMDATA         = 13,
 };
 
 enum MACROPLUGINRETURNTYPE
