@@ -1,4 +1,10 @@
-﻿zg 29.11.2014 02:37:27 +0200 - build 4202
+﻿zg 30.11.2014 11:55:22 +0200 - build 4203
+
+1. при переключении из режима без кастом колонки в режим с кастом колонкой в ней ничего не отображалось.
+
+2. экспериментально. постобработка данных, возвращаемых плагинами для кастом колонки, при помощи плагина LuaMacro.
+
+zg 29.11.2014 02:37:27 +0200 - build 4202
 
 1. уточнение 4137.
 
